# usage-example-tokio-cron-scheduler

./: .gitignore  Cargo.toml  README.md  make_graphs.py
entrypoints/: debank_extractor_entrypoint.sh
scripts/: config_on_aws.sh  first_deploy.sh  log_pc_resources.sh  misc.sh
services/: debank-extractor.service  log-cpu-resources.service
src/: main.rs
src/processes/: debank_process.rs  mod.rs
src/schedulers/: main_scheduler.rs  mod.rs
src/services/: get_debank_balance_service.rs  mod.rs
